--- a/css/style.css
+++ b/css/style.css
@@ -143,11 +143,56 @@ header {
     font-size: 1.5rem;
     cursor: pointer;
 }
+.menu-icon {
+    width: 30px;
+    height: 24px;
+    position: relative;
+    transition: all 0.3s ease;
+}
 
+.menu-icon span {
+    display: block;
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    background: var(--dark-color);
+    border-radius: 3px;
+    opacity: 1;
+    left: 0;
+    transform: rotate(0deg);
+    transition: all 0.3s ease;
+}
+
+.menu-icon span:nth-child(1) {
+    top: 0px;
+}
+
+.menu-icon span:nth-child(2) {
+    top: 10px;
+}
+
+.menu-icon span:nth-child(3) {
+    top: 20px;
+}
+
+.menu-icon.active span:nth-child(1) {
+    top: 10px;
+    transform: rotate(135deg);
+}
+
+.menu-icon.active span:nth-child(2) {
+    opacity: 0;
+    left: -60px;
+}
+
+.menu-icon.active span:nth-child(3) {
+    top: 10px;
+    transform: rotate(-135deg);
+}
 /* Hero Section */
 .hero {
     height: 100vh;
-    background-image: url("../image/woman-6754248.jpg");
+    background-image: url("../image/woman-6754248.webp");
     background-size: cover;
     background-position: center;
     color: var(--white);
@@ -536,6 +581,52 @@ footer {
         display: block;
     }
 
+    .menu-icon {
+        width: 30px;
+        height: 24px;
+        position: relative;
+        transition: all 0.3s ease;
+    }
+
+    .menu-icon span {
+        display: block;
+        position: absolute;
+        height: 3px;
+        width: 100%;
+        background: var(--dark-color);
+        border-radius: 3px;
+        opacity: 1;
+        left: 0;
+        transform: rotate(0deg);
+        transition: all 0.3s ease;
+    }
+
+    .menu-icon span:nth-child(1) {
+        top: 0;
+    }
+
+    .menu-icon span:nth-child(2) {
+        top: 10px;
+    }
+
+    .menu-icon span:nth-child(3) {
+        top: 20px;
+    }
+
+    .menu-icon.active span:nth-child(1) {
+        top: 10px;
+        transform: rotate(135deg);
+    }
+
+    .menu-icon.active span:nth-child(2) {
+        opacity: 0;
+        left: -60px;
+    }
+
+    .menu-icon.active span:nth-child(3) {
+        top: 10px;
+        transform: rotate(-135deg);
+    }
     .nav-menu {
         position: fixed;
         top: 60px;
@@ -549,12 +640,15 @@ footer {
         transition: var(--transition);
     }
 
+    .nav-menu a {
+        padding: 15px 85px 15px 45px;
+    }
     .nav-menu.active {
         left: 0;
     }
 
     .nav-menu li {
-        padding-left: 45px;
+        padding-left: 5px;
         margin: 15px 0;
     }
 
