--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,7 @@ header {
     height: 100vh;
     background-image: url("../image/woman-6754248.webp");
     background-size: cover;
+    background-color: #f5f5f5;
     background-position: center;
     color: var(--white);
     display: flex;
@@ -276,12 +277,12 @@ header {
 }
 
 .specialty-img {
-    height: 300px;
+    width: 420px;
+    height: 320px;
     overflow: hidden;
 }
 
 .specialty-img img {
-    width: 100%;
     height: 100%;
     object-fit: cover;
     transition: var(--transition);
@@ -365,7 +366,7 @@ header {
     position: relative;
     overflow: hidden;
     border-radius: 10px;
-    height: 200px;
+    height: 300px;
 }
 
 .gallery-item img {
@@ -577,6 +578,9 @@ footer {
 }
 
 @media (max-width: 768px) {
+    .hero {
+        background-image: url("../image/Betterimage.ai_mobie.jpeg");
+    }
     .mobile-menu-btn {
         display: block;
     }
@@ -641,7 +645,7 @@ footer {
     }
 
     .nav-menu a {
-        padding: 15px 85px 15px 45px;
+        padding: 16px 80px 16px 60px;
     }
     .nav-menu.active {
         left: 0;
