--- a/css/style.css
+++ b/css/style.css
@@ -277,12 +277,12 @@ header {
 }
 
 .specialty-img {
-    width: 420px;
     height: 320px;
     overflow: hidden;
 }
 
 .specialty-img img {
+    width: 100%;
     height: 100%;
     object-fit: cover;
     transition: var(--transition);
@@ -643,13 +643,17 @@ footer {
         padding: 40px 0;
         transition: var(--transition);
     }
+
+    .nav-menu a {
+        padding: 15px 85px 15px 5px;
+    }
     .nav-menu.active {
         left: 0;
     }
 
     .nav-menu li {
-        margin: 2px 0;
-        padding: 15px 66px 15px 68px;
+        padding-left: 45px;
+        margin: 15px 0;
     }
 
     .hero h1 {
